--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
 	<head>
 		<title> 👋 ARJUN</title>
+		<meta name="google-site-verification" content="LnwG0WNVek80drBQ2MhSLRBMNKCYHoe1zOFvioViROI" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
